# alien

./: .buildinfo  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  tutorial.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: IfpArcaneLinuxEl8Gimkl2018b.yml  IfpAutoLinuxEl7Foss2018b.yml  IfpAutoLinuxEl7Gimkl2018b.yml  IfpAutoLinuxEl8Foss2018b.yml  IfpAutoLinuxEl8Gimkl2018b.yml  IfpEl7Foss2018b.yml  IfpEl7Gimkl2018b.yml  IfpEl8Foss2018b.yml  IfpEl8Gimkl2018b.yml  IfpManuLinuxEl7Foss2018b.yml  IfpManuLinuxEl7Gimkl2018b.yml  IfpManuLinuxEl8Foss2018b.yml  IfpManuLinuxEl8Gimkl2018b.yml  ci-ifpen_linux_el7_foss-2018b_by-components_external.yml  ci-ifpen_linux_el7_gimkl-2018b_by-components_external.yml  ci-ifpen_linux_el8_foss-2018b_by-components_external.yml  ci-ifpen_linux_el8_gimkl-2018b_by-components_external.yml  cmake.yml  coverity.yml  docker-publish.yml  documentation.yml  format.yml  ifpen_devenv_2021b.yml  ifpen_el7_foss-2018b.yml  ifpen_el7_gimkl-2018b.yml  ifpen_el8_foss-2018b.yml  ifpen_el8_gimkl-2018b.yml
CMake/: LoadAlienOptionsConfigGenerator.cmake
benchmark/: CMakeLists.txt
benchmark/src/: CMakeLists.txt
benchmark/src/alien/benchmark/: ILinearProblem.h  LinearBench.cpp  LinearBench.h  MatrixMarketProblem.cpp  MatrixMarketProblem.h
developer/: API.html  coding-style.html  index.html
docker/base/ubuntu-20.04/: Dockerfile
docs/: CMakeLists.txt
docs/sphinx/: index.rst  tutorial.rst
docs/sphinx/developer/: doxygen.rst  index.rst
docs/sphinx/plugin/: compilation.rst  data.rst  structure.rst
docs/sphinx/sycl/: build.rst  example.rst  index.rst  install.rst
docs/sphinx/user/: concepts.rst  move.rst
examples/: CMakeLists.txt  test_krylov.cpp  test_sycl.cpp
framework/CMake/: FindArccore.cmake
framework/arccon/build-system/: FindGinkgo.cmake
plugins/ginkgo/: CMakeLists.txt
plugins/ginkgo/bench/: CMakeLists.txt  bench_ginkgo.cpp
plugins/ginkgo/include/alien/ginkgo/: backend.h  machine_backend.h  options.h
plugins/ginkgo/src/: ginkgo_linear_algebra.cpp  ginkgo_linear_solver.cpp  ginkgo_linear_solver.h  ginkgo_logger.h  machine_backend.cpp  matrix.cpp  matrix.h  vector.cpp  vector.h
plugins/ginkgo/src/converters/: simplecsr_to_ginkgo_matrix.cpp  simplecsr_to_ginkgo_vector.cpp
plugins/ginkgo/test/: CMakeLists.txt  test_ginkgo.cpp
plugins/hypre/: CMakeLists.txt
plugins/hypre/CMake/: AlienHypreConfig.cmake.in
plugins/hypre/bench/: CMakeLists.txt  bench.cpp
plugins/hypre/examples/: CMakeLists.txt  driver_mm_hypre.cc  hypre_example_solve.cpp  hypre_example_solve_move.cpp
plugins/hypre/include/alien/hypre/: backend.h  options.h
plugins/hypre/src/: backend.cpp  hypre_direct_matrix_builder.cpp  hypre_direct_matrix_builder.h  hypre_instance.cpp  hypre_instance.h  hypre_linear_algebra.cpp  hypre_linear_solver.cpp  hypre_linear_solver.h  hypre_matrix.cpp  hypre_matrix.h  hypre_vector.cpp  hypre_vector.h
plugins/hypre/src/converters/: hypre_to_simplecsr_vector.cpp  hypre_to_simplecsr_vector.h  simplecsr_to_hypre_matrix.cpp  simplecsr_to_hypre_matrix.h  simplecsr_to_hypre_vector.cpp  simplecsr_to_hypre_vector.h
plugins/hypre/tests/: CMakeLists.txt  move_use.cpp  ref_use.cpp
plugins/petsc/: AlienPETScConfig.cmake.in  CMakeLists.txt
plugins/petsc/include/alien/petsc/: backend.h
plugins/petsc/src/: petsc_instance.cpp  petsc_instance.h  petsc_linear_algebra.cpp  petsc_linear_solver.cpp
plugins/trilinos/: CMakeLists.txt  Trilinos.config.in
plugins/trilinos/examples/: CMakeLists.txt  trilinos_example_solve.cpp
plugins/trilinos/include/alien/trilinos/: backend.h  options.h  trilinos_config.h
plugins/trilinos/src/: trilinos_config.cpp  trilinos_linear_algebra.cpp  trilinos_linear_solver.cpp  trilinos_linear_solver.h  trilinos_matrix.cpp  trilinos_matrix.h  trilinos_vector.cpp  trilinos_vector.h
plugins/trilinos/src/converters/: simplecsr_to_trilinos_matrix.cpp  simplecsr_to_trilinos_vector.cpp  trilinos_to_simplecsr_vector.cpp
plugins/trilinos/tests/: move_use.cpp  ref_use.cpp
src/: AlienConfig.cmake.in  AlienConfig.h.in  CMakeLists.txt  hypre_linear_solver.cpp
src/core/: CMakeLists.txt
src/core/alien/: Alien.h
src/core/alien/data/: CompositeMatrix.cc  CompositeVector.cc
src/core/alien/distribution/: MatrixDistribution.cc  VectorDistribution.cc  VectorDistribution.h
src/core/alien/import_export/: MatrixMarketSystemReader.h  Reader.h  SuiteSparseArchiveSystemReader.h
src/core/alien/utils/: ExceptionUtils.h  StdTimer.h  XML2Tools.h
src/core/tests/: CMakeLists.txt  Sample.config  Sample.json  Sample.xml  SampleOptionTypes.h  TestDoK.cc  TestFamilies.cc  TestOptionsConfig.cc  TestRedistributor.cc  main.cpp
src/docs/sphinx/plugin/: algebra.rst  compilation.rst  index.rst  solvers.rst  tutorial.rst
src/modules/: CMakeLists.txt
src/modules/core/src/: CMakeLists.txt
src/movesemantic/: CMakeLists.txt
src/movesemantic/alien/move/: AlienMoveSemantic.h
src/movesemantic/tests/: CMakeLists.txt  TestDoKDirectMatrixBuilder.cc  TestDoKMatrix.cc  TestDoKMatrixBuilder.cc  TestImportExport.cc  TestMatrixMarket.cc
src/refsemantic/: CMakeLists.txt
src/refsemantic/alien/ref/: AlienImportExport.h
src/refsemantic/tests/: CMakeLists.txt  TestCompositeMatrix.cc  TestCompositeVector.cc  TestImportExport.cc  TestMVExpr.cc  TestMVSYCL.cc  TestRedistributor.cc  TestSchur.cc  TestVBlockMatrixBuilder.cc
src/test/: CMakeLists.txt
src/test/tests/: CMakeLists.txt
src/test/tests/move_api/: TestDoKMatrix.cc
src/test_framework/: CreateLinearSystemFiles.cpp  CreateLinearSystemFiles.h
sycl/: SYCL.html  build.html  example.html  index.html  install.html
tools/python/: alien-env.yml
tools/python/options/: gen_baseoption.py  gen_tools.py  options.py  options.xsd
tools/python/options/input/: config.xml  sample-config.xml
tools/python/options/output/: SampleLinearSolverBaseOptionsEnum_config.h  (+2 more)
tools/sycl/: install-hipsycl.sh  install-llvm.sh
user/: build.html  concepts.html  index.html  move.html  ref.html
(+148 files in other folders)
